# hdmi-cec-homeassistant-proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config.toml.example
.github/workflows/: build.yml  publish.yml  review.yml  rust.yml
src/: config.rs  ha_entity.rs  hdmicec_entity.rs  main.rs  payloads.rs  process.rs  process_entity.rs  service.rs
