[package]
name = "hdmicec2mqtt"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
faux = "0.1.10"
log = "0.4.22"
rumqttc = "0.24.0"
serde_json = "1.0.125"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
toml = "0.8.19"

[dependencies.serde]
version="1.0.208"
features = ["derive"]
